doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-11-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/java/lib/javafx.base.jar:/usr/share/java/lib/javafx.controls.jar:/usr/share/java/lib/javafx.fxml.jar:/usr/share/java/lib/javafx.graphics.jar:/usr/share/java/lib/javafx.media.jar:/usr/share/java/lib/javafx.properties.jar:/usr/share/java/lib/javafx.swing.jar:/usr/share/java/lib/javafx.web.jar:/home/jpcorreia99/Universidade/2º Ano/POO/TestsAPI/lib/json-20180813.jar:/home/jpcorreia99/Universidade/2º Ano/POO/POO1819/UMCarroJA
-d
/home/jpcorreia99/Universidade/2º Ano/POO/POO1819/UMCarroJA/doc
-encoding
UTF-8
-charset
UTF-8
/home/jpcorreia99/Universidade/2º Ano/POO/POO1819/UMCarroJA/UMCarroJaComparators/ComparadorDistCliente.java
<---- end of javadoc command ---->
Loading source file /home/jpcorreia99/Universidade/2º Ano/POO/POO1819/UMCarroJA/UMCarroJaComparators/ComparadorDistCliente.java...
Constructing Javadoc information...
/home/jpcorreia99/Universidade/2º Ano/POO/POO1819/UMCarroJA/UMCarroJaComparators/ComparadorDistCliente.java:11: error: cannot find symbol
public class ComparadorDistCliente implements Comparator<ViaturaInfo>
                                                         ^
  symbol: class ViaturaInfo
/home/jpcorreia99/Universidade/2º Ano/POO/POO1819/UMCarroJA/UMCarroJaComparators/ComparadorDistCliente.java:13: error: cannot find symbol
    public int compare(ViaturaInfo v1, ViaturaInfo v2){
                       ^
  symbol:   class ViaturaInfo
  location: class ComparadorDistCliente
/home/jpcorreia99/Universidade/2º Ano/POO/POO1819/UMCarroJA/UMCarroJaComparators/ComparadorDistCliente.java:13: error: cannot find symbol
    public int compare(ViaturaInfo v1, ViaturaInfo v2){
                                       ^
  symbol:   class ViaturaInfo
  location: class ComparadorDistCliente
3 errors
